2011-10-31  Goedson Teixeira Paixao  <goedson@debian.org>

	* src/journal.c: replaced GtkObject by GtkWidget in Gtk event
	callback declarations.
	(do_show_report): replaced GTK_SIGNAL_FUNC by G_CALLBACK in
	callback bindings

2011-09-13  Goedson Teixeira Paixao  <goedson@debian.org>

	* src/ghtml-deprecated.c,src/ghtml.c: included glib/gi18n.h for
	the definition 	of internationalization functions

	* src/util.c: Removed usage of gnome.h
	(gtt_glade_xml_new): replaced use of deprecated
	g_concat_dir_and_file by g_build_filename

2011-09-11  Goedson Teixeira Paixao  <goedson@debian.org>

	* src/menucmd.c: Replaced gnome.h by glib/gi18n.h for the
	definition of the function '_'
	(about_box): Cast widget to GTK_WINDOW
	(new_project): Use GtkEntry instead of GnomeEntry

2011-08-17  Goedson Teixeira Paixao  <goedson@debian.org>

	* src/idle-dialog.c: Replaced gnome.h by glib/gi18n.h for the
	definition of the function '_'
	(idle_timeout_func): Replaces gdk_x11_drawable_get_xid by
	gdk_x11_window_get_xid

	* src/err.c: Included missing stdlib.h header

	* src/gtt.h: Included missing glib.h header

2011-08-10  Goedson Teixeira Paixao  <goedson@debian.org>

	* src/main.c (lock_gtt): Replaced usage of GnomeMessageBox by
	GtkMessageDialog 

	* src/journal.c, src/idle-timer.c : replaced usage of gtk_timeout*
	by g_timeout_* 	and g_source_* for timeout handling

2011-08-09  Goedson Teixeira Paixao  <goedson@debian.org>

	* src/export.c: Removed usage of gnome.h

	* src/app.c (app_new): Removed usage of deprecated functions

2011-08-05  Goedson Teixeira Paixao  <goedson@debian.org>

	* src/dialog.c (gtt_help_popup): Use gtk_show_uri instead of
	gnome_help_display for displaying the application help file.

2011-07-23  Goedson Teixeira Paixao  <goedson@debian.org>

	* src/err.c: replaced gnome.h for stdio.h for the definition of
	fprintf

	* src/err-throw.c: Replaced gnome.h by glib/gi18n.h for the
	definition of _()

2011-07-22  Goedson Teixeira Paixao  <goedson@debian.org>
